--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  nor1mix_1.1-3.tar.gz: c61bd6c29ee3fdedab43520c8be320382bae9d3f
 sources:
-  "nor1mix_1.1-3.tar.gz": c61bd6c29ee3fdedab43520c8be320382bae9d3f
+  nor1mix_1.1-4.tar.gz: 3fabf7ba09681c985ff013bb40f2b7fb9efc292b
